<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background">

    <ProgressBar
        android:id="@+id/ProgressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="invisible"/>

    <RelativeLayout
        android:id="@+id/RelTop"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@drawable/bottom_blue_round">

        <ImageView
            android:id="@+id/MenuImageView"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="14dp"
            android:padding="18dp"
            android:src="@drawable/ic_chevron_left" />

        <TextView
            android:id="@+id/NameTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="72dp"
            android:fontFamily="sans-serif-medium"
            android:text="@string/controlled_signal"
            android:textColor="@color/font_light"
            android:textSize="18dp" />

        <ImageView
            android:id="@+id/HelpImageView"
            android:layout_width="21dp"
            android:layout_height="21dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="20dp"
            android:src="@drawable/ic_quest"
            android:onClick="menuButtonClick" />


    </RelativeLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/RelTop"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="18dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/text"
        android:textColor="#858EC5"
        android:textSize="14sp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/RelBottom"
        android:layout_below="@id/RelTop"
        android:layout_marginTop="40dp">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/RecyclerView1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerHorizontal="true" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/RelBottom"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:background="#CCFFFFFF">

        <TextView
            android:id="@+id/CanselTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="25dp"
            android:fontFamily="sans-serif-medium"
            android:text="@string/cansel"
            android:textColor="@color/bottom_text_panel_background" />

        <TextView
            android:id="@+id/SaveTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="25dp"
            android:background="@drawable/circle_gradient_fiol"
            android:fontFamily="sans-serif-medium"
            android:padding="8dp"
            android:text="@string/save"
            android:textColor="#fff" />
    </RelativeLayout>

</RelativeLayout>